# CourseWork_1

./: main.py  pyproject.toml
src/main/: main.py
src/utils/: english_words.txt  utils.py
