[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["ilya <mrlivedance@vk.com>"]
readme = "README.md"
packages = [{include = "coursework_1"}]

[tool.poetry.dependencies]
python = "^3.11"
utils = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
